--- a/themes/two-line.toml
+++ b/themes/two-line.toml
@@ -1,5 +1,8 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
+# プロンプト生成のタイムアウトを設定（ミリ秒）
+command_timeout = 500
+
 format = """
 [╭╴](fg:arrow)\
 $directory\
